@@ -11,27 +11,27 @@
   <li class="update_summary_del">{update.NB_DEL_ELEMENTS} {L_NB_DEL_ELEMENTS}</li>
   <li class="update_summary_err">{update.NB_ERRORS} {L_UPDATE_NB_ERRORS}</li>
 </ul>
-<!-- BEGIN errors -->
+<!-- BEGIN update_errors -->
 <h3>{L_UPDATE_ERROR_LIST_TITLE}</h3>
 <ul>
-  <!-- BEGIN error -->
-  <li>[{update.errors.error.ELEMENT}] {update.errors.error.LABEL}</li>
-  <!-- END error -->
+  <!-- BEGIN update_error -->
+  <li>[{update.update_errors.update_error.ELEMENT}] {update.update_errors.update_error.LABEL}</li>
+  <!-- END update_error -->
 </ul>
 <h3>{L_UPDATE_ERRORS_CAPTION}</h3>
 <ul>
   <li><strong>PWG-UPDATE-1</strong> : {L_UPDATE_WRONG_DIRNAME_INFO}</li>
   <li><strong>PWG-UPDATE-2</strong> : {L_UPDATE_MISSING_TN_INFO} {{PICTURE_EXT_LIST}}</li>
 </ul>
-<!-- END errors -->
-<!-- BEGIN infos -->
+<!-- END update_errors -->
+<!-- BEGIN update_infos -->
 <h3>{L_UPDATE_INFOS_TITLE}</h3>
 <ul>
-  <!-- BEGIN info -->
-  <li>[{update.infos.info.ELEMENT}] {update.infos.info.LABEL}</li>
-  <!-- END info -->
+  <!-- BEGIN update_info -->
+  <li>[{update.update_infos.update_info.ELEMENT}] {update.update_infos.update_info.LABEL}</li>
+  <!-- END update_info -->
 </ul>
-<!-- END infos -->
+<!-- END update_infos -->
 <!-- END update -->
 
 <!-- BEGIN metadata_result -->
@@ -45,36 +45,43 @@
 <!-- BEGIN introduction -->
 <h3>{L_UPDATE_TITLE}</h3>
 <form action="{F_ACTION}" method="post" id="update">
-  <ul>
-    <li>
-      {L_UPDATE_SYNC_FILES}
-      <ul>
-        <li><input type="radio" name="sync" value="dirs" {SYNC_DIRS_CHECKED} /> {L_UPDATE_SYNC_DIRS}</li>
-        <li><input type="radio" name="sync" value="files" {SYNC_ALL_CHECKED} /> {L_UPDATE_SYNC_ALL}</li>
-        <li><input type="checkbox" name="display_info" value="1" {DISPLAY_INFO_CHECKED} /> {L_UPDATE_DISPLAY_INFO}</li>
-        <li><input type="checkbox" name="simulate" value="1" checked="checked" /> {L_UPDATE_SIMULATE}</li>
-      </ul>
-    </li>
-    <li>
-      {L_UPDATE_SYNC_METADATA}. {L_USED_METADATA} : {METADATA_LIST}.
-      <ul>
-        <li><input type="radio" name="sync" value="metadata_new" /> {L_UPDATE_SYNC_METADATA_NEW}</li>
-        <li><input type="radio" name="sync" value="metadata_all" /> {L_UPDATE_SYNC_METADATA_ALL}</li>
-      </ul>
-    </li>
-    <li>
-      {L_UPDATE_CATS_SUBSET}<br />
-      <select style="width:500px" name="cat" size="10">
-        <!-- BEGIN category_option -->
-        <option {introduction.category_option.SELECTED} value="{introduction.category_option.VALUE}">{introduction.category_option.OPTION}</option>
-        <!-- END category_option -->
-      </select>
-      <input type="checkbox" name="subcats-included" value="1" {SUBCATS_INCLUDED_CHECKED} /> {L_SEARCH_SUBCATS_INCLUDED}
-    </li>
-  </ul>
-  <p>
+
+  <fieldset>
+    <legend>{L_UPDATE_SYNC_FILES}</legend>
+
+    <ul>
+      <li><label><input type="radio" name="sync" value="dirs" {SYNC_DIRS_CHECKED} /> {L_UPDATE_SYNC_DIRS}</label></li>
+      <li><label><input type="radio" name="sync" value="files" {SYNC_ALL_CHECKED} /> {L_UPDATE_SYNC_ALL}</label></li>
+      <li><label><input type="checkbox" name="display_info" value="1" {DISPLAY_INFO_CHECKED} /> {L_UPDATE_DISPLAY_INFO}</label></li>
+      <li><label><input type="checkbox" name="simulate" value="1" checked="checked" /> {L_UPDATE_SIMULATE}</label></li>
+    </ul>
+  </fieldset>
+
+  <fieldset>
+    <legend>{L_UPDATE_SYNC_METADATA}</legend>
+    <p> {L_USED_METADATA} : {METADATA_LIST}.</p>
+    <ul>
+      <li><label><input type="radio" name="sync" value="metadata_new" /> {L_UPDATE_SYNC_METADATA_NEW}</label></li>
+      <li><label><input type="radio" name="sync" value="metadata_all" /> {L_UPDATE_SYNC_METADATA_ALL}</label></li>
+    </ul>
+  </fieldset>
+  
+  <fieldset>
+    <legend>{L_UPDATE_CATS_SUBSET}</legend>
+  
+    <select style="width:500px" name="cat" size="10">
+      <!-- BEGIN category_option -->
+      <option {introduction.category_option.SELECTED} value="{introduction.category_option.VALUE}">{introduction.category_option.OPTION}</option>
+      <!-- END category_option -->
+    </select>
+  
+    <label><input type="checkbox" name="subcats-included" value="1" {SUBCATS_INCLUDED_CHECKED} /> {L_SEARCH_SUBCATS_INCLUDED}</label>
+  </fieldset>
+
+  <p class="bottomButtons">
     <input type="submit" value="{L_SUBMIT}" name="submit" class="bouton" />
     <input type="reset"  value="{L_RESET}"  name="reset"  class="bouton" />
   </p>
+
 </form>
 <!-- END introduction -->
